<resources>
    <string name="app_name">Castilla</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="BotonSiguiente">siguiente</string>
    <string name="BotonAnterior">Anterior</string>
    <string name="txtdezcripcion">Descripcion</string>
    <string name="txtdireccion">Direccion</string>
    <string name="txthorarios">Horarios</string>
    <string name="txtcelulares">Celulares</string>
    <string name="txtanexos">Anexos o Centros Poblados</string>
    <string name="titualcalde">Alcalde Provincial</string>
    <string name="txtalcalde">Raul Caceres Muñoz</string>
    <string name="txtdiasatencion">Dias de Atencion</string>
    <string name="txtfestividades">Festividades Importantes</string>
    <string name="festividades">Nuestra Señora de las Peñas, Festival del Camaron, Dia del Pisco</string>
    <string name="fundobarra">Fundo barra es un lugar pensado en cada momento. Es un lugar para una salida con amigo, una reunión de trabajo, un festejo de cumpleaños o una cena tranquila. Ven y crea tu instante.</string>
    <string name="desaplao">La provincia fue creada en honor al Mariscal Ramón Castilla a petición del pueblo de Aplao mediante acta suscrita por 410 ciudadanos del valle de Majes el 7 de marzo de 1854. Fue creada mediante Decreto Supremo del 21 de marzo de 1854, sobre la base de las parroquias de Aplao, Andagua, Chachas, Huancarqui, Pampacolca, Viraco y Choco.</string>
    <string name="castilloencantado"> Formacion rocosa como castillo formada por el pasar de los años y con la ayuda del viento, se cuenta muchas leyendas de este lugar maravilloso y encantador el cual se puede llegar a pie o a caballo </string>
    <string name="itemA">Diseño Web</string>
    <string name="aplaoanexos">Aplao,Cosos,La Barranca,Acoy,Ongoro,La Central, Andamayo, Cochate, La Pampa, Querulpa Grande, Querulpa Chico, Huatiapilla, El Castillo, El Monte, Mamas, La Real, Luchea, Buenos Aires, Vilbao, Caspani, Maran, Casquina</string>
    <string name="tecniconame">AQPTECNOLOGIAS</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="cuerpodelante">Bienvenido al Aplicativo de turismo Castilla, donde podrás encontrar recomendaciones de comida, lugares para visitar y sus respectivas ubicaciones para tener una increíble experiencia de la Provincia de Castilla. </string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="descarga">Documentos que puedes revisar o descargar de la Provincia Castilla</string>
    <string name="enero">Enero</string>
    <string name="febrero">Febrero</string>
    <string name="marzo">Marzo</string>
    <string name="abril">Abril</string>
    <string name="mayo">Mayo</string>
    <string name="junio">Junio</string>
    <string name="julio">Julio</string>
    <string name="agosto">Agosto</string>
    <string name="setiembre">Setiembre</string>
    <string name="octubre">Octubre</string>
    <string name="noviembre">Noviembre</string>
    <string name="diciembre">Diciembre</string>
    <string name="dia">Dia:</string>
    <string name="lugar">Lugar:</string>
    <string name="evento">Nombre de Evento:</string>
    <string name="descripcion">Descripcion:</string>
    <string name="title_activity_detalle_noticias">detalle_noticias</string>
    <string name="calendariodes">Bienvenidos al Calendario Turistico de Castilla, en el cual podras encontrar todos los eventos de nuestra provincia:</string>


    <string name="fullscreen_image">Imagen a pantalla completa</string>

</resources>