<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout5"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".frgE">

    <!-- TODO: Update blank fragment layout -->

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <TextView
                android:id="@+id/textdescripcion"
                style="@style/labeltitulo"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:text="@string/txtdezcripcion"
                />

            <TextView
                android:id="@+id/textView12"
                style="@style/labeldezcripcion"
                android:text="@string/desaplao"
                app:layout_constraintTop_toBottomOf="@+id/textdescripcion" />

            <TextView
                android:id="@+id/textdireccion"
                style="@style/labeltitulo"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:text="@string/txtdireccion"
                app:layout_constraintTop_toBottomOf="@+id/textView12" />

            <TextView
                android:id="@+id/txtdireccion"
                style="@style/labeldezcripcion"
                android:text="Distrito de Aplao - Provincia Castilla - Departamento Arequipa"
                app:layout_constraintTop_toBottomOf="@+id/textdireccion" />

            <TextView
                android:id="@+id/textalcalde"
                style="@style/labeltitulo"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:text="@string/titualcalde"
                app:layout_constraintTop_toBottomOf="@+id/txtdireccion" />

            <TextView
                android:id="@+id/txtalcalde"
                style="@style/labeldezcripcion"
                android:text="@string/txtalcalde"
                app:layout_constraintTop_toBottomOf="@+id/textalcalde" />

            <TextView
                android:id="@+id/textanexos"
                style="@style/labeltitulo"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:text="@string/txtanexos"
                app:layout_constraintTop_toBottomOf="@+id/txtalcalde" />

            <TextView
                android:id="@+id/txtanexos"
                style="@style/labeldezcripcion"
                android:text="@string/aplaoanexos"
                app:layout_constraintTop_toBottomOf="@+id/textanexos" />

            <TextView
                android:id="@+id/textfiestas"
                style="@style/labeltitulo"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:text="@string/txtfestividades"
                app:layout_constraintTop_toBottomOf="@+id/txtalcalde" />

            <TextView
                android:id="@+id/txtfiestas"
                style="@style/labeldezcripcion"
                android:text="@string/festividades"
                app:layout_constraintTop_toBottomOf="@+id/textanexos" />

            <TextView
                android:id="@+id/texttitulocelulares"
                style="@style/labeltitulo"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:text="@string/txtcelulares"
                app:layout_constraintTop_toBottomOf="@+id/txtanexos" />

            <TextView
                android:id="@+id/txtcelulares"
                style="@style/labeldezcripcion"
                android:text="969734486"
                app:layout_constraintTop_toBottomOf="@+id/texttitulocelulares" />

            <Button
                android:id="@+id/button4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Button" />

        </LinearLayout>
    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>