<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".frgA">


    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <TextView
                android:id="@+id/textdescripcion"
                style="@style/labeltitulo"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:text="@string/txtdezcripcion"
                />

            <TextView
                android:id="@+id/tdes"
                style="@style/labeldezcripcion"
                android:ellipsize="end"
                android:justificationMode="inter_word"
                android:maxLines="6"
                app:layout_constraintTop_toBottomOf="@+id/textdescripcion" />

            <TextView
                android:id="@+id/textdireccion"
                style="@style/labeltitulo"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:text="@string/txtdireccion"
                app:layout_constraintTop_toBottomOf="@+id/tdes" />

            <TextView
                android:id="@+id/tdireccion"
                style="@style/labeldezcripcion"
                app:layout_constraintTop_toBottomOf="@+id/textdireccion" />

            <TextView
                android:id="@+id/textalcalde"
                style="@style/labeltitulo"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:text="@string/titualcalde"
                app:layout_constraintTop_toBottomOf="@+id/tdireccion" />

            <TextView
                android:id="@+id/talcalde"
                style="@style/labeldezcripcion"
                app:layout_constraintTop_toBottomOf="@+id/textalcalde" />

            <TextView
                android:id="@+id/textanexos"
                style="@style/labeltitulo"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:text="@string/txtanexos"
                app:layout_constraintTop_toBottomOf="@+id/talcalde" />

            <TextView
                android:id="@+id/tanexos"
                style="@style/labeldezcripcion"
                app:layout_constraintTop_toBottomOf="@+id/textanexos" />

            <TextView
                android:id="@+id/textfiestas"
                style="@style/labeltitulo"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:text="@string/txtfestividades"
                app:layout_constraintTop_toBottomOf="@+id/talcalde" />

            <TextView
                android:id="@+id/tfestividades"
                style="@style/labeldezcripcion"
                app:layout_constraintTop_toBottomOf="@+id/textanexos" />

            <TextView
                android:id="@+id/texttitulocelulares"
                style="@style/labeltitulo"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:text="@string/txtcelulares"
                app:layout_constraintTop_toBottomOf="@+id/tanexos" />

            <TextView
                android:id="@+id/tcelulares"
                style="@style/labeldezcripcion"
                app:layout_constraintTop_toBottomOf="@+id/texttitulocelulares" />



        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>